Update traefik and tcd to latest

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -7,6 +7,9 @@ dns_nameservers:
 
 traefik_config_dir: /home/pi/app_config/traefik
 traefik_dynamic_config_dir: /home/pi/app_config/traefik/conf.d
+traefik_docker_image: traefik:v2.11.2
+
+tcd_docker_image: ldez/traefik-certs-dumper:v2.8.3
 
 pihole_config_dir: /home/pi/app_config/pihole
 
