--- a/playbooks/dns/main.yml
+++ b/playbooks/dns/main.yml
@@ -1,3 +1,3 @@
 - import_playbook: ./custom_docker_network.yml
 - import_playbook: ./pihole.yml
-- import_playbook: ./cloudflare_ddns
+- import_playbook: ./cloudflare_ddns.yml
