Setup pihole backups

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -1,6 +1,8 @@
 ansible_password: "{{ inventoryPasswords.bananapi }}"
 ansible_sudo_pass: "{{ inventoryPasswords.bananapi }}"
 
+cron_scripts_dir: /home/pi/scripts
+
 # bananapi is dns server and should loop back to self
 dns_nameservers:
   - "127.0.0.1"
