--- a/playbooks/asustor_services/main.yml
+++ b/playbooks/asustor_services/main.yml
@@ -5,7 +5,4 @@
       traefik_app_file_name: 'plex.yml'
 
     - role: home.traefik_app
-      traefik_app_file_name: 'portal.nas.local.yml'
-
-    - role: home.traefik_app
-      traefik_app_file_name: 'portal.nas.local.yml'
+      traefik_app_file_name: 'portainer.nas.local.yml'
