--- a/playbooks/kubernetes/files/haproxy.cfg
+++ b/playbooks/kubernetes/files/haproxy.cfg
@@ -17,11 +17,20 @@ frontend stats
   stats uri /
   stats refresh 10s
 
-frontend myfrontend
+frontend front-endhttp
   bind :80
-  default_backend cluster
+  default_backend cluster-http
 
-backend cluster
-  server s1 192.168.4.182:30100 check
-  server s2 192.168.4.183:30100 check
-  server s3 192.168.4.184:30100 check
+backend cluster-http
+  server s1 192.168.4.182:30080 check
+  server s2 192.168.4.183:30080 check
+  server s3 192.168.4.184:30080 check
+
+frontend front-endhttps
+  bind :443
+  default_backend cluster-https
+
+backend cluster-https
+  server s1 192.168.4.182:30443 check
+  server s2 192.168.4.183:30443 check
+  server s3 192.168.4.184:30443 check
