--- a/playbooks/kubernetes/files/haproxy.cfg
+++ b/playbooks/kubernetes/files/haproxy.cfg
@@ -22,15 +22,19 @@ frontend front-endhttp
   default_backend cluster-http
 
 backend cluster-http
-  server s1 192.168.4.182:30080 check
-  server s2 192.168.4.183:30080 check
-  server s3 192.168.4.184:30080 check
+  option forwardfor
+  server worker_1 192.168.4.182:30080 check send-proxy-v2
+  server worker_2 192.168.4.184:30080 check send-proxy-v2
 
 frontend front-endhttps
   bind :443
+  mode tcp
+  option tcplog
+  tcp-request inspect-delay 5s
+  tcp-request content accept if { req_ssl_hello_type 1 }
   default_backend cluster-https
 
 backend cluster-https
-  server s1 192.168.4.182:30443 check
-  server s2 192.168.4.183:30443 check
-  server s3 192.168.4.184:30443 check
+  mode tcp
+  server worker_1 192.168.4.182:30443 send-proxy-v2
+  server worker_2 192.168.4.184:30443 send-proxy-v2
