--- a/playbooks/kubernetes/files/haproxy.cfg
+++ b/playbooks/kubernetes/files/haproxy.cfg
@@ -1,7 +1,7 @@
 
 global
   stats socket /var/run/api.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
-  log stdout format raw local0 info
+  log stdout format raw local0 debug
 
 defaults
   mode http
@@ -9,7 +9,11 @@ defaults
   timeout connect 5s
   timeout server 10s
   timeout http-request 10s
+  timeout tunnel 1h
   log global
+  option httplog
+  option tcplog
+  option logasap
 
 frontend stats
   bind *:8404
@@ -18,16 +22,17 @@ frontend stats
   stats refresh 10s
 
 frontend front-endhttp
-  bind :80
+  bind 192.168.4.144:80
+  option httplog
   default_backend cluster-http
 
 backend cluster-http
   option forwardfor
-  server worker_1 192.168.4.182:30080 check send-proxy-v2
-  server worker_2 192.168.4.184:30080 check send-proxy-v2
+  server worker_1 192.168.4.189:30080 check send-proxy-v2
+  server worker_2 192.168.4.190:30080 check send-proxy-v2
 
 frontend front-endhttps
-  bind :443
+  bind 192.168.4.144:443
   mode tcp
   option tcplog
   tcp-request inspect-delay 5s
@@ -36,5 +41,5 @@ frontend front-endhttps
 
 backend cluster-https
   mode tcp
-  server worker_1 192.168.4.182:30443 send-proxy-v2
-  server worker_2 192.168.4.184:30443 send-proxy-v2
+  server worker_1 192.168.4.189:30443 send-proxy-v2
+  server worker_2 192.168.4.190:30443 send-proxy-v2
