Restore apt command to containerd

--- a/playbooks/kubernetes/001_containerd.yml
+++ b/playbooks/kubernetes/001_containerd.yml
@@ -12,8 +12,8 @@
       - curl
       - gnupg
       - lsb-release
-  # roles:
-  #   - role: abbottland.core.apt
+  roles:
+    - role: abbottland.core.apt
   
   tasks:
     - name: Add docker apt repository key.
