--- a/playbooks/kubernetes/files/haproxy.cfg
+++ b/playbooks/kubernetes/files/haproxy.cfg
@@ -21,6 +21,15 @@ frontend stats
   stats uri /
   stats refresh 10s
 
+# Asustor redirect for dashboard plex URL
+frontend front-endplex
+  bind 192.168.4.144:8022
+  mode tcp
+  option tcplog
+  tcp-request inspect-delay 5s
+  tcp-request content accept if { req_ssl_hello_type 1 }
+  default_backend cluster-https
+
 frontend front-endhttp
   bind 192.168.4.144:80
   option httplog
@@ -30,6 +39,7 @@ backend cluster-http
   option forwardfor
   server worker_1 192.168.4.189:30080 check send-proxy-v2
   server worker_2 192.168.4.190:30080 check send-proxy-v2
+  server dumbledore 192.168.4.157:30080 check send-proxy-v2
 
 frontend front-endhttps
   bind 192.168.4.144:443
@@ -43,3 +53,4 @@ backend cluster-https
   mode tcp
   server worker_1 192.168.4.189:30443 send-proxy-v2
   server worker_2 192.168.4.190:30443 send-proxy-v2
+  server dumbledore 192.168.4.157:30443 send-proxy-v2
