--- a/playbooks/kubernetes/002_host_prep.yml
+++ b/playbooks/kubernetes/002_host_prep.yml
@@ -2,20 +2,21 @@
 - name: Disable Swap
   hosts:
     - kubernetes_servers
+    - kubernetes_external_workers
   become: true
   handlers:
-    - name: Restart kubelet
-      block:
-        - name: Check if kubelet is setup
-          stat:
-            path: /etc/kubernetes/kubelet.conf
-          register: kubelet_enabled
+    - name: Check if kubelet is setup
+      stat:
+        path: /etc/kubernetes/kubelet.conf
+      register: kubelet_enabled
+      listen: Restart kubelet
 
-        - name: Restart Kubelet Service
-          ansible.builtin.systemd_service:
-            name: kubelet
-            state: restarted
-          when: kubelet_enabled.stat.exists
+    - name: Restart Kubelet Service
+      ansible.builtin.systemd_service:
+        name: kubelet
+        state: restarted
+      when: kubelet_enabled.stat.exists
+      listen: Restart kubelet
   tasks:
     - name: Check if swap is enabled
       ansible.builtin.command: /sbin/swapon --show=NAME --noheadings
@@ -34,6 +35,7 @@
 - name: Enable IPv4 Packet forwarding
   hosts:
     - kubernetes_servers
+    - kubernetes_external_workers
   become: true
   handlers:
     - name: Apply sysctl changes
