Update playbooks to match new proxmox cluster and vms

--- a/playbooks/prometheus/metrics_node_exporter.yml
+++ b/playbooks/prometheus/metrics_node_exporter.yml
@@ -24,6 +24,6 @@
 - name: Metrics - node_exporter
   hosts:
     - web_servers
-    - phoenix
+    - chimaera
   roles:
     - role: prometheus.prometheus.node_exporter
