--- a/inventory.yml
+++ b/inventory.yml
@@ -13,7 +13,7 @@ all:
         kubernetes_servers:
           hosts:
             kubernetes_controller:
-              ansible_host: 192.168.4.188
+              ansible_host: 192.168.4.193
               ansible_user: firebolt
               ansible_password: "{{ inventoryPasswords.kubernetes_node }}"
               ansible_sudo_pass: "{{ inventoryPasswords.kubernetes_node }}"
@@ -21,12 +21,12 @@ all:
             kubernetes_workers:
               hosts:
                 kubernetes_worker_1:
-                  ansible_host: 192.168.4.189
+                  ansible_host: 192.168.4.194
                   ansible_user: firebolt
                   ansible_password: "{{ inventoryPasswords.kubernetes_node }}"
                   ansible_sudo_pass: "{{ inventoryPasswords.kubernetes_node }}"
                 kubernetes_worker_2:
-                  ansible_host: 192.168.4.190
+                  ansible_host: 192.168.4.195
                   ansible_user: firebolt
                   ansible_password: "{{ inventoryPasswords.kubernetes_node }}"
                   ansible_sudo_pass: "{{ inventoryPasswords.kubernetes_node }}"
@@ -38,8 +38,8 @@ all:
               ansible_password: "{{ inventoryPasswords.bananapi }}"
               ansible_sudo_pass: "{{ inventoryPasswords.bananapi }}"
       hosts:
-        phoenix:
-          ansible_host: 192.168.4.170
+        chimaera:
+          ansible_host: 192.168.4.192
           ansible_user: root
           ansible_password: "{{ inventoryPasswords.phoenix }}"
           ansible_sudo_pass: "{{ inventoryPasswords.phoenix }}"
