--- a/playbooks/kubernetes/000_qemu.yml
+++ b/playbooks/kubernetes/000_qemu.yml
@@ -11,3 +11,5 @@
           name: qemu-guest-agent
           state: present
           update_cache: true
+# TODO: run proxmox to mark each vm as qemu enabled
+# reboot
