--- a/playbooks/ping/linux_hosts.yml
+++ b/playbooks/ping/linux_hosts.yml
@@ -3,7 +3,7 @@
   hosts:
     - web_servers
     - room_of_requirement
-    - phoenix
+    - chimaera
   tasks:
     - name: Ping host
       ansible.builtin.ping: {}
