Ensure prometheus metrics playbook is working with new setup

--- a/playbooks/prometheus/metrics_node_exporter.yml
+++ b/playbooks/prometheus/metrics_node_exporter.yml
@@ -23,7 +23,7 @@
 
 - name: Metrics - node_exporter
   hosts:
-    - web_servers
+    - bananapi
     - chimaera
   roles:
     - role: prometheus.prometheus.node_exporter
