Add worker3 to load balancer

--- a/playbooks/kubernetes/files/haproxy.cfg
+++ b/playbooks/kubernetes/files/haproxy.cfg
@@ -40,6 +40,7 @@ backend cluster-http
   server worker_1 192.168.4.194:30080 check send-proxy-v2
   server worker_2 192.168.4.195:30080 check send-proxy-v2
   server dumbledore 192.168.4.157:30080 check send-proxy-v2
+  server worker_3 192.168.5.81:30080 check send-proxy-v2
 
 frontend front-endhttps
   bind 192.168.4.144:443
@@ -54,3 +55,4 @@ backend cluster-https
   server worker_1 192.168.4.194:30443 send-proxy-v2
   server worker_2 192.168.4.195:30443 send-proxy-v2
   server dumbledore 192.168.4.157:30443 send-proxy-v2
+  server worker_3 192.168.5.81:30443 send-proxy-v2
