--- a/playbooks/kubernetes/001_storage.yml
+++ b/playbooks/kubernetes/001_storage.yml
@@ -1,16 +1,16 @@
 
-# - name: Install NFS common utils
-#   hosts:
-#     - kubernetes_servers
-#     - kubernetes_external_workers
-#   become: true
-#   tasks:
-#     - name: Install kubernetes tools
-#       ansible.builtin.apt:
-#         name:
-#           - nfs-common
-#         state: present
-#         update_cache: yes
+- name: Install NFS common utils
+  hosts:
+    - kubernetes_servers
+    - kubernetes_external_workers
+  become: true
+  tasks:
+    - name: Install kubernetes tools
+      ansible.builtin.apt:
+        name:
+          - nfs-common
+        state: present
+        update_cache: yes
 
 
 - name: Install open-iscsi on dumbledore
@@ -29,3 +29,31 @@
         name: iscsi
         enabled: yes
         state: started
+
+- name: Format and mount SSD for Longhorn
+  hosts: kubernetes_workers
+  become: yes
+  tasks:
+    - name: Ensure the SSD is formatted with ext4
+      filesystem:
+        fstype: ext4
+        dev: /dev/vda
+
+    - name: Create mount directory
+      file:
+        path: /mnt/longhorn-ssd
+        state: directory
+        mode: '0755'
+
+    - name: Mount the SSD
+      mount:
+        path: /mnt/longhorn-ssd
+        src: /dev/vda
+        fstype: ext4
+        state: mounted
+
+    - name: Persist the mount in /etc/fstab
+      lineinfile:
+        path: /etc/fstab
+        line: "/dev/vda /mnt/longhorn-ssd ext4 defaults 0 0"
+        state: present
